<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/parcours" android:title="@string/listeParcours"
        android:icon="@drawable/ic_action_star"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/search" android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|" />
    <item android:id="@+id/refresh" android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/carte" android:title="@string/naviguer"
        android:icon="@drawable/ic_action_locate"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/jouer" android:title="@string/jouer"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom" />
</menu>